CloudConsultingSalesforce/force-app/main/default/objects/Project__c/fields/Date_Display__c.field-meta.xml
<CustomField>
    <fullName>Date_Display__c</fullName>
    <formula>&apos;From:&apos; &amp; &apos; &apos; &amp; TEXT(Start_Date__c) &amp; &apos; &apos; &amp; &apos; &apos;  &amp; &apos;To:&apos; &amp; &apos; &apos; &amp; TEXT(End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Display</label>
    <type>Text</type>
</CustomField>