CloudConsultingSalesforce/force-app/main/default/objects/Project__c/fields/Hours_Covered__c.field-meta.xml
<CustomField>
    <fullName>Hours_Covered__c</fullName>
    <label>Hours Covered</label>
    <summarizedField>Project_Line_Item__c.Hours_Covered__c</summarizedField>
    <summaryForeignKey>Project_Line_Item__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>