CloudConsultingSalesforce/force-app/main/default/objects/Project__c/validationRules/Hours_Covered_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Covered_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  Total_Hours__c &lt;&gt;  Hours_Covered__c &amp;&amp;   ISPICKVAL( Stage__c, 
    &apos;In Progress&apos;),
     True,
     False
)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>The hours have not been covered yet</errorMessage>
</ValidationRule>