CloudConsultingSalesforce/force-app/main/default/objects/Project__c/validationRules/HoursCoveredValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>HoursCoveredValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Hours_Covered__c &lt;&gt;  Total_Hours__c &amp;&amp;   ISPICKVAL(Stage__c, &apos;In Progress&apos; ) || ISPICKVAL(Stage__c, &apos;Completed&apos; ), true, false)</errorConditionFormula>
    <errorMessage>The hours have not been completed yet</errorMessage>
</ValidationRule>