CloudConsultingSalesforce/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>